--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,10 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 # data base setting
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=100MB
+itemImgLocation = C:/Users/boomp/IdeaProjects/carrot_market/src/main/resources/static/img
+uploadPath=file:///C:/Users/boomp/IdeaProjects/carrot_market/src/main/resources/static/
